--- a/app/Resources/views/articles/articles.html.twig
+++ b/app/Resources/views/articles/articles.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h1>List all Articles</h1>
-    <p>List rows of Articles with Lazy Loading
+    <p>List rows of Articles with EXTRA_LAZY Loading
     <br>Article OneToMany Comment.</p>
 
     {% for article in articles %}
