add right title in views

--- a/app/Resources/views/product/products.html.twig
+++ b/app/Resources/views/product/products.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>List all Products</h1>
+    <h1>List all Products [EAGER]</h1>
     <p>List rows of Product, with to call to the Feature's properties.
     <br>Product OneToMany Feature.</p>
 
