--- a/app/Resources/views/user/users-lazy.html.twig
+++ b/app/Resources/views/user/users-lazy.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>List all Users - Lazy Loading</h1>
+    <h1>List all Users [LAZY]</h1>
     <p>List rows of User and call to InfoUser's properties.
     <br>User OneToOne UserInfo.</p>
 
