--- a/app/Resources/views/user/users.html.twig
+++ b/app/Resources/views/user/users.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>List all Users</h1>
+    <h1>List all Users [LAZY]</h1>
     <p>List rows of User, without to call to the InfoUser's properties.
     <br>User OneToOne UserInfo.</p>
 
